base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ergo
  labels:
    name: ergo
    pod-security.kubernetes.io/enforce: privileged
