base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: irc-gateway
  namespace: ergo
  annotations:
    metallb.universe.tf/address-pool: default-pool
spec:
  gatewayClassName: istio
  listeners:
    - name: irc
      port: 6667
      protocol: TCP
      allowedRoutes:
        kinds:
        - kind: TCPRoute      
        namespaces:
          from: All
    - name: irc-tls
      port: 6697
      protocol: TCP
      allowedRoutes:
        kinds:
        - kind: TCPRoute         
        namespaces:
          from: All
