base/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: irc-route
  namespace: ergo
spec:
  parentRefs:
    - name: irc-gateway
      namespace: istio-system
      sectionName: irc
  rules:
    - backendRefs:
        - name: ergo-service
          port: 6667
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: irc-tls-route
  namespace: ergo
spec:
  parentRefs:
    - name: irc-gateway
      namespace: istio-system
      sectionName: irc-tls
  rules:
    - backendRefs:
        - name: ergo-service
          port: 6697
